--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.10",
     "nodemon": "^2.0.15",
     "router": "^1.3.6"
