--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.10",
     "nodemon": "^2.0.15",
-    "router": "^1.3.6"
+    "router": "^1.3.6",
+    "stripe": "^8.203.0",
+    "uuid": "^8.3.2"
   }
 }
