--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "react-stripe-checkout": "^2.6.3",
+    "sweetalert2": "^11.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
